# Payment-api

./: .env  docker-compose.yaml  pyproject.toml
client/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/app/: app.vue
client/app/components/: EmailSuccess.vue  Error.vue  Form.vue  Header.vue  PageHeader.vue  Pagination.vue  Transaction.vue  WhatsappSuccess.vue
client/app/components/Product/: CopyURL.vue  DeleteModal.vue  EditForm.vue  Listing.vue
client/app/composables/: useClipboard.ts
client/app/middleware/: auth.global.ts  auth.ts
client/app/pages/: callback.vue  index.vue  login.vue
client/app/pages/admin/: groups.vue
client/app/pages/product/: [productId].vue
client/app/pages/whatsapp/: [groupId].vue
client/app/types/: fedapay.ts  products.ts  transaction.ts  whatsapp.ts
client/server/api/auth/: login.post.ts
client/server/api/email/: send.post.ts
client/server/api/fedapay/: create-customer.post.ts  customer.get.ts  transaction.get.ts  transaction.post.ts
client/server/api/products/: [productId].get.ts  add.post.ts  (+4 more)
server/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
server/src/: config.py  model.py  schema.py
server/src/api/: app.py  dependencies.py
server/src/api/routes/: auth.py  email.py  fedapay.py  products.py  whatsapp.py
server/src/services/: drive.py  email_service.py  fedapay.py  whatsapp.py
server/src/storage/: database.py
server/src/utils/: utils.py
src/api/: app.py
src/api/routes/: fedapay.py  whatsapp.py
src/services/: fedapay.py
(+12 files in other folders)
